# liblogging

./: .gitignore  .travis.yml  AGENTS.md  ARCHITECTURE.md  AUTHORS  COPYING  ChangeLog  HISTORY.md  Makefile.am  README  README.md  configure.ac  liblogging.pc.in
doc/html/: annotated.html  beepchannel_8c.html  beepchannel_8h-source.html  beepchannel_8h.html  beepframe_8c.html  beepframe_8h-source.html  beepframe_8h.html  beeplisten_8c.html  beeplisten_8h-source.html  beeplisten_8h.html  beepmessage_8c.html  beepmessage_8h-source.html  beepmessage_8h.html  beepprofile_8c.html  beepprofile_8h-source.html  beepprofile_8h.html  beepsession-lstn_8c.html  beepsession_8c.html  beepsession_8h-source.html  beepsession_8h.html  clntprof-3195cooked_8c.html  clntprof-3195cooked_8h-source.html  clntprof-3195cooked_8h.html  clntprof-3195raw_8c.html  clntprof-3195raw_8h-source.html  clntprof-3195raw_8h.html  config_8h-source.html  config_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  liblogging_8h-source.html  liblogging_8h.html  (+60 more)
rfc3195/: .gitignore  AUTHORS  COPYING  README  liblogging-rfc3195.pc  liblogging-rfc3195.pc.in
rfc3195/doc/html/: Makefile.am  annotated.html  beepchannel_8h.html  beeplisten_8c.html  beeplisten_8h-source.html  beeplisten_8h.html  beepmessage_8h-source.html  beepprofile_8h-source.html  beepsession_8c.html  beepsession_8h-source.html  beepsession_8h.html  clntprof-3195cooked_8c.html  clntprof-3195raw_8c.html  clntprof-3195raw_8h-source.html  clntprof-3195raw_8h.html  config_8h-source.html  functions_vars.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  liblogging_8h-source.html  lstnprof-3195cooked_8c.html  namevaluetree_8c.html  oscallsWin32_8c.html  oscalls_8h.html  socketsUnix_8c.html  sockets_8c.html  srAPI-lstn_8c.html  srAPI_8h.html  srUtils_8c.html  srUtils_8h-source.html  srUtils_8h.html  stringbuf_8h.html  structsbFramObject.html  structsbLstnObject.html  structsbMesgObject.html  structsbNVTEObject-members.html  structsbPSSRObject__.html  structsbSessObject-members.html  (+6 more)
rfc3195/src/: Makefile.am  architecture.c  beepchannel.c  beepchannel.h  beepframe.c  beepframe.h  beeplisten.c  beeplisten.h  beepmessage.c  beepmessage.h  beepprofile.c  beepprofile.h  beepsession-lstn.c  beepsession.c  beepsession.h  clntprof-3195cooked.c  clntprof-3195cooked.h  clntprof-3195raw.c  clntprof-3195raw.h  liblogging.h  lstnprof-3195cooked.c  lstnprof-3195cooked.h  lstnprof-3195raw.c  lstnprof-3195raw.h  namevaluetree.c  namevaluetree.h  oscalls.c  oscalls.h  oscallsUnix.c  oscallsWin32.c  resource.h  settings.h  sockets.c  sockets.h  socketsUnix.c  socketsWin32.c  srAPI-lstn.c  srAPI.c  srAPI.h  srUtils.c  (+8 more)
src/: Makefile.am  architecture.c  beepchannel.c  beepchannel.h  beepframe.c  beeplisten.c  beeplisten.h  beepmessage.c  beepprofile.c  beepprofile.h  beepsession-lstn.c  beepsession.c  beepsession.h  clntprof-3195cooked.c  clntprof-3195cooked.h  clntprof-3195raw.c  clntprof-3195raw.h  config.h  doxywiz  liblogging.h  lstnprof-3195cooked.c  lstnprof-3195cooked.h  lstnprof-3195raw.c  lstnprof-3195raw.h  makefile  namevaluetree.c  namevaluetree.h  oscalls.c  oscalls.h  oscallsUnix.c  oscallsWin32.c  sockets.c  sockets.h  socketsUnix.c  socketsWin32.c  srAPI-lstn.c  srAPI.c  srAPI.h  srUtils.c  srUtils.h  (+8 more)
src/FreeBSD/: makefile
src/linux/: makefile
src/solaris/: makefile
src/win32/: TestDrvr.vcproj  liblogging.sln  liblogging.vcproj  testsrvr.vcproj
stdlog/: .gitignore  COPYING  Makefile.am  README.md  file.c  formatter.c  jrnldrvr.c  liblogging-stdlog.pc  liblogging-stdlog.pc.in  libstdlog.h  libstdlog.pc.in  stdlog-intern.h  stdlog.c  stdlog.h  stdlog.rst  stdlogctl  stdlogctl.1  stdlogctl.c  stdlogctl.rst  tester  tester.c  timeutils.c  uxsock.c
