doc_files = \
	annotated.html \
	beepchannel_8c.html \
	beepchannel_8h.html \
	beepchannel_8h-source.html \
	beepframe_8c.html \
	beepframe_8h.html \
	beepframe_8h-source.html \
	beeplisten_8c.html \
	beeplisten_8h.html \
	beeplisten_8h-source.html \
	beepmessage_8c.html \
	beepmessage_8h.html \
	beepmessage_8h-source.html \
	beepprofile_8c.html \
	beepprofile_8h.html \
	beepprofile_8h-source.html \
	beepsession_8c.html \
	beepsession_8h.html \
	beepsession_8h-source.html \
	beepsession-lstn_8c.html \
	clntprof-3195cooked_8c.html \
	clntprof-3195cooked_8h.html \
	clntprof-3195cooked_8h-source.html \
	clntprof-3195raw_8c.html \
	clntprof-3195raw_8h.html \
	clntprof-3195raw_8h-source.html \
	config_8h.html \
	config_8h-source.html \
	doxygen.css \
	doxygen.png \
	files.html \
	functions.html \
	functions_vars.html \
	globals_defs.html \
	globals_enum.html \
	globals_eval.html \
	globals_func.html \
	globals.html \
	globals_type.html \
	index.html \
	liblogging_8h.html \
	liblogging_8h-source.html \
	lstnprof-3195cooked_8c.html \
	lstnprof-3195cooked_8h.html \
	lstnprof-3195cooked_8h-source.html \
	lstnprof-3195raw_8c.html \
	lstnprof-3195raw_8h.html \
	lstnprof-3195raw_8h-source.html \
	Makefile.am
	namevaluetree_8c.html \
	namevaluetree_8h.html \
	namevaluetree_8h-source.html \
	oscalls_8c.html \
	oscalls_8h.html \
	oscalls_8h-source.html \
	oscallsUnix_8c.html \
	oscallsWin32_8c.html \
	pages.html \
	resource_8h-source.html \
	sockets_8c.html \
	sockets_8h.html \
	sockets_8h-source.html \
	socketsUnix_8c.html \
	socketsWin32_8c.html \
	srAPI_8c.html \
	srAPI_8h.html \
	srAPI_8h-source.html \
	srAPI-lstn_8c.html \
	srUtils_8c.html \
	srUtils_8h.html \
	srUtils_8h-source.html \
	stringbuf_8c.html \
	stringbuf_8h.html \
	stringbuf_8h-source.html \
	structsbChanObject.html \
	structsbChanObject-members.html \
	structsbFramObject.html \
	structsbFramObject-members.html \
	structsbLstnObject.html \
	structsbLstnObject-members.html \
	structsbMesgObject.html \
	structsbMesgObject-members.html \
	structsbNVTEObject.html \
	structsbNVTEObject-members.html \
	structsbProfObject.html \
	structsbProfObject-members.html \
	structsbPSRCObject__.html \
	structsbPSRCObject__-members.html \
	structsbPSSRObject__.html \
	structsbPSSRObject__-members.html \
	structsbSessObject.html \
	structsbSessObject-members.html \
	structsbSockObject.html \
	structsbSockObject-members.html \
	structsbStrBObject.html \
	structsbStrBObject-members.html \
	structsrAPIObject.html \
	structsrAPIObject-members.html \
	syslogmessage_8c.html \
	syslogmessage_8h.html \
	syslogmessage_8h-source.html \
	template_8h-source.html \
	todo.html

EXTRA_DIST = $(doc_files)
